--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,6 +1,13 @@
-<mat-nav-list>
-    <a mat-list-item [routerLink]="['user', user.id]" *ngFor="let user of users">
-        <p matLine>{{ user.nome }}</p>
-        <p matLine class="">{{ user.cognome }}</p>
-    </a>
-</mat-nav-list>
+<div class="container">
+    <div class="row d-flex flex-wrap justify-content-center">
+        <div class="col-10 p-0 col-sm-5 col-xl-3 card d-flex justify-content-center align-items-center m-3" [routerLink]="['user', user.id]" *ngFor="let user of users">
+            <div class="card-header w-100">
+               <span>ID corsista: {{user.id}}</span>
+            </div>
+            <ul class="list-group list-group-flush w-100">
+                <li class="list-group-item text-white " [ngClass]="user.id % 2 == 0 ? 'bg-dark' : 'bg-secondary'">{{ user.nome }}</li>
+                <li class="list-group-item text-white " [ngClass]="user.id % 2 !== 0 ? 'bg-dark' : 'bg-secondary'">{{user.cognome}}</li>
+            </ul>
+        </div>
+    </div>
+</div>
