--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,8 @@
 <!-- 'mat-toolbar' è un componente di Angular Material che crea una barra degli strumenti (toolbar).
      È un componente stilizzato che può contenere titoli, pulsanti o altri elementi. -->
      <mat-toolbar>
-        <!-- Qui puoi inserire contenuti nella toolbar, come titoli, menu, pulsanti, ecc. -->
+        <!-- Qui puoi inserire contenuti nella toolbar, come titoli, menu, pulsanti, ecc. IN QUESTO CASO il titolo della page -->
+        <span>{{ title }}</span>
     </mat-toolbar>
     
     <!-- 'div' è un tag HTML standard che definisce una sezione o un contenitore nel documento.
