--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <button mat-mini-fab color="primary" (click)="create()">
+        <mat-icon>add</mat-icon>
+    </button>
     <div class="row d-flex flex-wrap justify-content-center">
         <div class="col-10 p-0 col-sm-5 col-xl-3 card d-flex justify-content-center align-items-center m-3" [routerLink]="['user', user.id]" *ngFor="let user of users">
             <div class="card-header w-100">
